# rush-c-cpp

./: CMakeLists.txt
cpp-primer-plus/p2/: myfirst.cpp
cpp-primer-plus/p3/: bondini.cpp  floatnum.cpp  fltadd.cpp  typecast.cpp
cpp-primer-plus/p4/: instr.cpp
p2/: carrot.cpp  sqrt.cpp
